# ambyte

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  generate_key.py  install.ps1  install.sh  pyproject.toml  setup.sh
.github/workflows/: ci-cd.yml  docker-publish.yml
apps/audit-log/: Dockerfile  pyproject.toml
apps/audit-log/src/: config.py  consumer.py  hashing.py  main.py  repository.py  sealer.py
apps/audit-log/src/crypto/: merkle.py  signer.py
apps/cli/: pyproject.toml
apps/cli/ambyte_cli/: config.py  main.py
apps/cli/ambyte_cli/commands/: audit.py  check.py  cloud.py  core.py  inventory.py  project.py
apps/cli/ambyte_cli/services/: api_client.py  audit_verifier.py  auth.py  git.py  inventory.py  loader.py  oidc.py  sync.py
apps/cli/ambyte_cli/ui/: console.py
apps/control-plane-api/: pyproject.toml
apps/control_plane_api/: Dockerfile  docker-compose.yml  pyproject.toml
apps/control_plane_api/alembic/: env.py
apps/control_plane_api/alembic/versions/: 48e7671e8188_add_external_id_to_organizations.py  595b84699f76_add_project_memberships_table.py  5a05b6f99b7c_add_audit_blocks_table.py  9ecf16061e87_add_triggered_by_to_lineage_runs.py  a27d1f71f00c_add_entry_hash_to_audit_logs.py  f86c9f5d3c15_init_schema.py  fc1c7797a558_add_obligation_unique_constraint.py
apps/control_plane_api/src/: main.py
apps/control_plane_api/src/api/: deps.py
apps/control_plane_api/src/api/v1/: api.py
apps/control_plane_api/src/api/v1/endpoints/: audit.py  auth.py  check.py  ingest.py  lineage.py  obligations.py  opa.py  project.py  resources.py  stats.py  webhooks.py
apps/control_plane_api/src/core/: cache.py  config.py  hashing.py  merkle.py  scopes.py  security.py
apps/control_plane_api/src/db/: base.py  session.py
apps/control_plane_api/src/db/models/: __init__.py  audit.py  auth.py  inventory.py  lineage.py  membership.py  mixins.py  policy.py  tenancy.py
apps/control_plane_api/src/schemas/: audit.py  auth.py  check.py  ingest.py  lineage.py  policy.py  stats.py
apps/control_plane_api/src/scripts/: init_db.py
apps/control_plane_api/src/services/: audit_buffer.py  audit_service.py  decision_service.py  ingest_service.py  inventory_service.py  lineage_graph_adapter.py  lineage_service.py  opa_service.py  policy_service.py  stats_service.py
apps/ingest-worker/: pyproject.toml
apps/ingest_worker/: Dockerfile  pyproject.toml
apps/ingest_worker/ingest_worker/: config.py  main.py  worker.py
apps/ingest_worker/ingest_worker/extractors/: base.py  chunker.py  pdf_parser.py
apps/ingest_worker/ingest_worker/intelligence/: embedding.py  llm_client.py  prompts.py  regulation_search.py  vector_store.py
apps/ingest_worker/ingest_worker/schemas/: ingest.py
apps/ingest_worker/ingest_worker/services/: control_plane_client.py  deduplicator.py  definition_extractor.py  job_store.py  obligation_extractor.py  pipeline.py  regulation_indexer.py  storage.py
apps/policy-compiler/: pyproject.toml
apps/policy_compiler/: pyproject.toml  service.py
apps/policy_compiler/ambyte_compiler/: __init__.py  mappings.py  matcher.py  service.py  validators.py
apps/policy_compiler/ambyte_compiler/diff_engine/: service.py
apps/policy_compiler/ambyte_compiler/generators/: __init__.py  databricks_sql.py  iam_builder.py  local_python.py  rego_builder.py  s3_policy.py  snowflake_sql.py
apps/policy_compiler/diff_engine/: models.py  service.py
apps/policy_compiler/generators/: iam_builder.py
apps/web/: .env.local.example  Dockerfile  components.json  layout.tsx  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
connectors/airflow-operator/: pyproject.toml
connectors/databricks-unity/: pyproject.toml
connectors/databricks-unity/ambyte_databricks/: config.py  crawler.py  enforcer.py  executor.py  groups.py  lineage.py  main.py  mapper.py  sink.py  state.py
connectors/python-common/: pyproject.toml
policy-library/rego/: main.rego
policy-library/sql_templates/: row_access.sql  tag_binding.sql
schemas/: pyproject.toml
schemas/ambyte_schemas/: __init__.py
schemas/ambyte_schemas/models/: artifact.py  audit.py  common.py  dataset.py  inventory.py  lineage.py  obligation.py  ontology.py
schemas/ambyte_schemas/proto/audit/v1/: audit_pb2.py  audit_pb2.pyi
schemas/ambyte_schemas/proto/common/v1/: common_pb2.py  common_pb2.pyi
schemas/ambyte_schemas/proto/dataset/v1/: dataset_pb2.py  dataset_pb2.pyi
schemas/ambyte_schemas/proto/lineage/v1/: lineage_pb2.py  lineage_pb2.pyi
schemas/ambyte_schemas/proto/obligation/v1/: obligation_pb2.py  obligation_pb2.pyi
schemas/ontology/: ai_act_mappings.yaml  databricks_mappings.yaml
schemas/ontology/regulations/: gdpr_mappings.yaml
schemas/platform_mappings/: snowflake_mappings.yaml
schemas/proto/: buf.gen.yaml
schemas/proto/audit/v1/: audit.proto
schemas/proto/common/v1/: common.proto
schemas/proto/dataset/v1/: dataset.proto
schemas/proto/lineage/v1/: lineage.proto
schemas/proto/obligation/v1/: obligation.proto
tests/: conftest.py
tests/cli/: test_api_client_service.py  test_audit_cmds.py  test_audit_verifier_service.py  test_auth_service.py  test_check_cmds.py  test_cloud_cmds.py  test_config_manager.py  test_core_advanced.py  test_core_build.py  test_git_history.py  test_inventory_cmds.py  test_inventory_loader.py  test_main.py  test_obligation_loader.py  test_oidc_service.py  test_project_cmds.py  test_sync_client.py
tests/policy-compiler/: test_diff_engine.py  test_iam_builder.py  test_integration_compiler.py  test_rego_builder.py  test_s3_policy_gen.py  test_snowflake_gen.py
tests/python_sdk/: test_client_network.py  test_config.py  test_context.py  test_decision_engine.py  test_decorators_async.py  test_decorators_sync.py  test_evaluator.py  test_lineage_tracer.py  test_tracking_manager.py  test_watcher.py
tests/rules-engine/: test_conflict_resolution.py  test_lineage_graph.py
tests/schemas/: test_common_models.py  test_dataset_models.py  test_lineage_models.py  test_roundtrips.py  (+1 more)
(+105 files in other folders)
