[project]
name = "ambyte-schemas"
version = "0.1.0"
description = "Canonical ontology and data contracts for Ambyte"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.4",
    "protobuf>=6.33.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "grpcio-tools>=1.76.0",
    "mypy-protobuf>=3.7.0",
    "types-protobuf>=6.32.1.20251105",
]
