[project]
name = "ambyte-control-plane"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ambyte-schemas",
    "ambyte-rules",
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.17.2",
    "psycopg[binary,pool]>=3.2.13"
]

[tool.uv]
package = false

[tool.uv.sources]
ambyte-schemas = { workspace = true }
ambyte-rules = { workspace = true }