[project]
name = "ambyte-control-plane-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ambyte-compiler",
    "ambyte-schemas",
    "ambyte-rules",
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.17.2",
    "psycopg[binary,pool]>=3.2.13",
    "python-jose[cryptography]>=3.5.0",
    "redis>=5.3.1",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "svix>=1.84.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ambyte-compiler = { workspace = true }
ambyte-schemas = { workspace = true }
ambyte-rules = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]