[project]
name = "ambyte-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ambyte-schemas",
    "langchain>=1.0.8",
    "openai>=2.8.1",
    "tiktoken>=0.12.0",
    "qdrant-client>=1.16.0", # For the vector store
    "unstructured[pdf]>=0.18.18" # For PDF parsing
]

[tool.uv]
package = false

[tool.uv.sources]
ambyte-schemas = { workspace = true }