[project]
name = "ambyte-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ambyte-schemas",
    "fastapi>=0.117.1",
    "uvicorn[standard]>=0.38.0",
    "openai>=2.8.1",
    "tiktoken>=0.12.0",
    "qdrant-client>=1.16.0", # For the vector store
    "unstructured[pdf, docx]>=0.18.18", # For PDF parsing
    "python-multipart>=0.0.20",
    "voyageai>=0.3.7",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ambyte-schemas = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["ingest_worker"]