[project]
name = "ambyte-compiler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ambyte-schemas>=0.1.0",
    "ambyte-rules>=0.1.0",
    "jinja2>=3.1.6",
    "sqlparse>=0.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ambyte-schemas = { workspace = true }
ambyte-rules = { workspace = true }