[project]
name = "ambyte-airflow-plugin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ambyte-connectors", # Depends on the common base
    "apache-airflow>=3.1.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ambyte-connectors = { workspace = true }