[project]
name = "ambyte-connectors"
version = "0.1.0"
description = "Base classes for Python enforcement agents"
requires-python = ">=3.11"
dependencies = [
    "ambyte-schemas",
    "requests>=2.32.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ambyte-schemas = { workspace = true }